--- a/api/Minedu.MiCertificado.Api/MDS.Inventario.Api.DataAccess/MDS.Inventario.Api.DataAccess.csproj
+++ b/api/Minedu.MiCertificado.Api/MDS.Inventario.Api.DataAccess/MDS.Inventario.Api.DataAccess.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MDS.Inventario.Api.Application.Entities\MDS.Inventario.Api.Application.Entities.csproj" />
     <ProjectReference Include="..\MDS.Inventario.Api.DataAccess.Contracts\MDS.Inventario.Api.DataAccess.Contracts.csproj" />
   </ItemGroup>
 
