--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "formik": "^2.1.5",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -34,7 +35,8 @@
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
