GRVB: Implementación de login - services

--- a/api/Minedu.MiCertificado.Api/MDS.Inventario.Api/MDS.Inventario.Api.csproj
+++ b/api/Minedu.MiCertificado.Api/MDS.Inventario.Api/MDS.Inventario.Api.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <UserSecretsId>3413aaa2-c7f7-44f9-8e62-14576f7b25b0</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
