--- a/api/Minedu.MiCertificado.Api/MDS.Inventario.Api/appsettings.json
+++ b/api/Minedu.MiCertificado.Api/MDS.Inventario.Api/appsettings.json
@@ -17,38 +17,12 @@
       "https://constancia.minedu.gob.pe:8051"
     ]
   },
-  "ReCaptcha": {
-    "ConstanciaKey": "6LehobwUAAAAAGHFbDkfNtz3Fvh4WhLlaQBfGfzY",
-    "ConstanciaValidator": 0,
-    "CertificadoKey": "6LehobwUAAAAAGHFbDkfNtz3Fvh4WhLlaQBfGfzY",
-    "CertificadoValidator": 0
-  },
   "PDF": {
     "QRCodeUrl": "https://constancia.minedu.gob.pe:8051",
     "QRCodeUrlCertificado": "https://certificado.minedu.gob.pe:8051",
     "WaterMarkTextConstancia": "NO ES LA ÚLTIMA\nCONSTANCIA GENERADA",
     "WaterMarkTextCertificado": "NO ES EL ÚLTIMO\nCERTIFICADO GENERADO",
     "FontSize": "60"
-  },
-  "ReniecService": {
-    "BaseUrl": "http://192.168.210.182:8080/MINEDUEPV2/ReniecWS?wsdl",
-    "UserName": "USRPAMPA",
-    "Password": "2909B42a",
-    "RequestIP": "127.0.0.1"
-  },
-  "SiagieService": {
-    "BaseUrl": "http://10.1.1.63/siagieapi/",
-    "ServerName": "MiCertificado",
-    "Ticket": "MiCertificado",
-    "UserId": "e634ca89c",
-    "UserName": "fd15e2c3b"
-  },
-  "SeguridadService": {
-    "BaseUrl": "http://10.1.1.69/SeguridadWas/MED.SeguridadWAS.MedSeguridadServices.svc?wsdl",
-    "DataBaseSiagie": "db_siagie2",
-    "IdSistemaSiagie": "41",
-    "DataBaseCertificado": "db_micertificado",
-    "IdSistemaCertificado": "04"
   },
   "Polly": {
     "MaxTrys": 3,
@@ -58,7 +32,7 @@
     "CacheExpireInMinutes": 30
   },
   "ConnectionStrings": {
-    "MDSInventarioDBContext": "Data Source=10.200.2.24;Initial Catalog=db_micertificado;User ID=user_micertificado;Password=user_micertificado;"
+    "MDSInventarioDBContext": "Data Source=localhost;Initial Catalog=db_inventario;User ID=sa;Password=sqlserver;"
   },
   "Roles": {
     "Ugel": "032",
